<resources>
    <string name="app_name">KALENDARO</string>
    <!--Login View-->
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar contraseña</string>
    <string name="login_sign_in">Iniciar Sesión</string>
    <string name="login_sign_up">Registrarse</string>
    <string name="login_reset_password">Cambiar contraseña</string>
    <string name="login_sign_in_google">Iniciar Sesión con Google</string>
    <string name="login_forgot_password">He olvidado mi contraseña</string>
    <string name="login_create_account">REGISTRARSE</string>
    <string name="login_go_login">Volver al Inicio de Sesión</string>
    <!--    Menu View-->
    <string name="menu_dia_actual">Hoy</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_rutinas">Rutinas</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_categoria_rutinas">Categorías</string>
    <string name="menu_crear_categoria">Crear Categoría</string>
    <string name="menu_crear_rutina">Crear Rutina</string>
    <string name="menu_crear_rutina_hoy">Crear Rutina para hoy</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_editar_perfil">Editar Perfil</string>
    <string name="menu_log_out">Cerrar Sesión</string>
    <string name="menu_graficas">Mis estadísticas</string>
    <!--Crear Categoria-->
    <string name="categoria_insert_nombre">Nombre de la categoría</string>
    <string name="categoria_buscar_galeria">GALERÍA</string>
    <string name="categoria_buscar_camara">HACER FOTO</string>
    <string name="categoria_buscar_arasaac">ARASAAC</string>
    <string name="categoria_guardar">GUARDAR</string>
    <string name="categoria_continuar">CONTINUAR</string>
    <string name="categoria_insert_imagen_text">INSERTE NOMBRE E IMAGEN DE LA CATEGORÍA</string>
    <!--List View Categorias-->
    <string name="categoria_crear">Crear nueva categoría</string>
    <!--Crear Rutina-->
    <string name="rutina_insert_nombre">Nombre de la rutina</string>
    <string name="rutina_insert_imagen_text">INSERTE NOMBRE, FECHA Y \nPORTADA DE LA RUTINA</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="rutina_input_fecha_inicio">FECHA INICIO</string>
    <string name="rutina_input_fecha_fin">FECHA FIN</string>

    <!--Crear Actividad-->
    <string name="actividad_nombre">ACTIVIDAD</string>
    <string name="actividad_input_hora">HORA DE INICIO</string>
    <string name="actividad_input_nombre">ACTIVIDAD</string>
    <string name="actividad_aniadir">AÑADIR ACTIVIDAD</string>
    <string name="actividad_insert_imagen">INSERTE NOMBRE, HORA\n E IMAGEN DE LA ACTIVIDAD</string>
    <string name="actividad_edit_imagen">MODIFIQUE NOMBRE, HORA DE INICIO\n O IMAGEN DE LA ACTIVIDAD</string>
    <string name="actividad_insert_nombre">Nombre de la actividad</string>
    <string name="menu_crear_actividad">Crear Actividad</string>
    <string name="menu_editar_actividad">Editar Actividad</string>
    <!--List View Actividad-->
    <string name="actividad_realizada_pregunta">¿Actividad Realizada?</string>
    <string name="actividad_realizada_ok">¡Hecho!</string>
    <string name="actividad_realizada_regular">¡Casi lo logras!</string>
    <string name="actividad_realizada_mal">¡Vamos de nuevo!</string>

    <!--Dialog Options-->
    <string name="dialog_repe_cat">"Ya existe categoría con este nombre.\n¿Desea sustituirla?."</string>
    <string name="dialog_repe_rut">"Ya existe rutina con este nombre.\n¿Desea sustituirla?"</string>
    <string name="dialog_repe_act">"Ya existe actividad para esta hora.\n¿Desea sustituirla?"</string>
    <string name="dialog_delete_cat">"Al eliminar la categoría seleccionada\nse eliminará permanentemente y también\nse eliminarán también las rutinas que contiene."</string>
    <string name="dialog_delete_rut">"Al eliminar la rutina seleccionada\nse eliminará del calendario y\nse eliminarán también las actividades que contiene."</string>
    <string name="dialog_delete_rut_day">"La rutina seleccionada se eliminará\ndel calendario pero podrá consultarse\nen la seccion de Tareas."</string>

    <string name="dialog_delete_act">"Se eliminará la actividad seleccionada."</string>

    <!--Estadísticas-->
    <string name="estadisticas_usuario">MIS ESTADÍSTICAS</string>
    <string name="estadisticas_graficas_estados_animo">Mis estados de ánimo</string>
    <string name="estadisticas_graficas_comer">Cómo he comido</string>
    <string name="estadisticas_graficas_ir_al_banio">Cómo he ido al baño</string>
    <string name="estadisticas_graficas_dormir">Cómo he dormido</string>
    <!--Gráficas-->
    <string name="grafica_estados_animo_anios">PROMEDIO DE LOS ÚLTIMOS 5 AÑOS</string>
    <string name="grafica_estados_animo_meses_anio">PROMEDIO DEL AÑO ACTUAL</string>
    <string name="grafica_estados_animo_dias_mes">MES ACTUAL</string>
    <!--Graficas Estados de Animo-->
    <string name="grafica_estados_animo">GRAFICAS SOBRE\nMIS ESTADOS DE ÁNIMO</string>
    <!--Graficas Comer-->
    <string name="grafica_comer">GRAFICAS SOBRE\nCÓMO HE COMIDO </string>
    <!--Graficas Ir al baño-->
    <string name="grafica_ir_al_banio">GRAFICAS SOBRE\nCÓMO HE IDO AL BAÑO </string>
    <!--Graficas Dormir-->
    <string name="grafica_dormir">GRAFICAS SOBRE\nCÓMOHE DORMIDO </string>

</resources>
