<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:fillViewport="true"
    tools:context=".activities.GraficasComerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"></include>

        <TextView
            android:id="@+id/barActualView"
            android:layout_width="405dp"
            android:layout_height="74dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:text="@string/grafica_comer"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/bar_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_graficaMesActual"
            android:layout_width="380dp"
            android:layout_height="75dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/grafica_estados_animo_dias_mes"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toTopOf="@+id/button_graficaMeses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barActualView"
            app:layout_constraintVertical_bias="0.982"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_graficaMeses"
            android:layout_width="380dp"
            android:layout_height="75dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/grafica_estados_animo_meses_anio"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toTopOf="@+id/button_graficaAnios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_graficaAnios"
            android:layout_width="380dp"
            android:layout_height="75dp"
            android:layout_marginBottom="144dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/grafica_estados_animo_anios"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toTopOf="@+id/conceptualMenuIconsBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/conceptualMenuIconsBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/BottomNavigationTheme"
            app:itemBackground="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/conceptual_menu_options"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>